--- a/app/src/main/res/layout/audio_record.xml
+++ b/app/src/main/res/layout/audio_record.xml
@@ -5,6 +5,17 @@
     android:background="#0277bd"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:05"
+        android:textAllCaps="true"
+        android:textColor="#ffffff"
+        android:textSize="75sp"
+        android:layout_gravity="center"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="195dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
